apply plugin: 'com.android.application'
apply plugin: 'org.greenrobot.greendao'

android {
    compileSdkVersion 28
    useLibrary 'org.apache.http.legacy'
    defaultConfig {
        applicationId "com.copasso.cocobill"
        minSdkVersion 16
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }
}

greendao {
    schemaVersion 1
    daoPackage 'com.copasso.cocobill.model.gen'
    targetGenDir 'src/main/java'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
    implementation 'com.google.android.material:material:1.1.0-alpha02'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'

    //Glide
    implementation 'com.github.bumptech.glide:glide:4.8.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'

    //MPAndroidChart
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'

    //Dialogs
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'

    //PickerView
    implementation 'com.contrarywind:Android-PickerView:4.1.6'

    //About
    implementation 'me.drakeet.support:about:2.2.0'

    //Multitype
    implementation 'me.drakeet.multitype:multitype-ktx:3.5.0'

    //Greendao
    implementation 'org.greenrobot:greendao:3.2.2'

    //Eventbus
    implementation 'org.greenrobot:eventbus:3.1.1'

    //Bmob
    implementation 'cn.bmob.android:bmob-sdk:3.6.8-rc7'

    //Rx
    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'

    //OkHttp
    implementation 'com.squareup.okio:okio:2.1.0'
    implementation 'com.squareup.okhttp3:okhttp:3.12.0'

    //Gson
    implementation 'com.google.code.gson:gson:2.8.5'

    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test:runner:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
}
